--- a/ClientApp/app/components/app/app.component.css
+++ b/ClientApp/app/components/app/app.component.css
@@ -2,5 +2,6 @@
     /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
     .body-content {
         padding-top: 60px;
+        padding:10px;
     }
 }
